--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "https": "^1.0.0",
     "nodemon": "^2.0.16",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.0"
